syntax = "proto3";

package kessel.relations.v0;

import "google/api/annotations.proto";
import "relations/v0/common.proto";
import "validate/validate.proto";


option go_package = "github.com/project-kessel/relations-api/api/relations/v0";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.relations.v0";

service KesselLookupService {
    rpc LookupSubjects(LookupSubjectsRequest) returns (stream LookupSubjectsResponse) {
        option (google.api.http) = {
            get: "/v0/subjects"
        };
    };
    rpc LookupResources(LookupResourcesRequest) returns (stream LookupResourcesResponse) {
        option (google.api.http) = {
            get: "/v0/resources"
        };
    };
}

message LookupResourcesRequest{
    ObjectReference resource = 1 [(validate.rules).any.required = true];
    string relation = 2 [(validate.rules).string.min_len = 1];
    ObjectType subject_type = 3 [(validate.rules).any.required = true];
    optional string subject_relation = 4;
    optional RequestPagination pagination = 5;
}

message LookupResourcesResponse{
    ObjectReference resource = 1;
    ResponsePagination pagination = 2;
}

message LookupSubjectsRequest {
    ObjectReference resource = 1 [(validate.rules).any.required = true];
    string relation = 2 [(validate.rules).string.min_len = 1];
    ObjectType subject_type = 3 [(validate.rules).any.required = true];
    optional string subject_relation = 4;
    optional RequestPagination pagination = 5;
}

message LookupSubjectsResponse {
    SubjectReference subject = 1;
    ResponsePagination pagination = 2;
}